--- a/references.bib
+++ b/references.bib
@@ -9,3 +9,47 @@
 	url = {https://portal.edirepository.org/nis/mapbrowse?packageid=knb-lter-hfr.109.18},
 	langid = {en}
 }
+
+@article{hoekman2010,
+	title = {Relative importance of top-down and bottom-up forces in food webs of Sarracenia pitcher communities at a northern and a southern site},
+	author = {Hoekman, David},
+	year = {2010},
+	month = {10},
+	date = {2010-10-08},
+	journal = {Oecologia},
+	pages = {1073--1082},
+	volume = {165},
+	number = {4},
+	doi = {10.1007/s00442-010-1802-2},
+	url = {http://dx.doi.org/10.1007/s00442-010-1802-2},
+	langid = {en}
+}
+
+@article{srivastava2011,
+	title = {Transcriptome Analysis of Sarracenia, an Insectivorous Plant},
+	author = {Srivastava, A. and Rogers, W. L. and Breton, C. M. and Cai, L. and Malmberg, R. L.},
+	year = {2011},
+	month = {06},
+	date = {2011-06-15},
+	journal = {DNA Research},
+	pages = {253--261},
+	volume = {18},
+	number = {4},
+	doi = {10.1093/dnares/dsr014},
+	url = {http://dx.doi.org/10.1093/dnares/dsr014},
+	langid = {en}
+}
+
+@article{stephens2015,
+	title = {Resolving phylogenetic relationships of the recently radiated carnivorous plant genus Sarracenia using target enrichment},
+	author = {Stephens, Jessica D. and Rogers, Willie L. and Heyduk, Karolina and Cruse-Sanders, Jennifer M. and Determann, Ron O. and Glenn, Travis C. and Malmberg, Russell L.},
+	year = {2015},
+	month = {04},
+	date = {2015-04},
+	journal = {Molecular Phylogenetics and Evolution},
+	pages = {76--87},
+	volume = {85},
+	doi = {10.1016/j.ympev.2015.01.015},
+	url = {http://dx.doi.org/10.1016/j.ympev.2015.01.015},
+	langid = {en}
+}
