--- a/code/references.bib
+++ b/code/references.bib
@@ -53,3 +53,34 @@
 	url = {http://dx.doi.org/10.1016/j.ympev.2015.01.015},
 	langid = {en}
 }
+
+@article{cresswell1993,
+	title = {The Morphological Correlates of Prey Capture and Resource Parasitism in Pitchers of the Carnivorous Plant Sarracenia purpurea},
+	author = {Cresswell, James E.},
+	year = {1993},
+	month = {01},
+	date = {1993-01},
+	journal = {American Midland Naturalist},
+	pages = {35},
+	volume = {129},
+	number = {1},
+	doi = {10.2307/2426433},
+	url = {http://dx.doi.org/10.2307/2426433}
+}
+
+@article{ellison2002,
+	title = {Nitrogen availability alters the expression of carnivory in the northern pitcher plant,
+            {\emph{Sarracenia}}
+            {\emph{purpurea}}},
+	author = {Ellison, Aaron M. and Gotelli, Nicholas J.},
+	year = {2002},
+	month = {03},
+	date = {2002-03-19},
+	journal = {Proceedings of the National Academy of Sciences},
+	pages = {4409--4412},
+	volume = {99},
+	number = {7},
+	doi = {10.1073/pnas.022057199},
+	url = {http://dx.doi.org/10.1073/pnas.022057199},
+	langid = {en}
+}
